NullNumberBinder now handles Doubles